--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       src="https://www.youtube.com/embed/iEjIgRpjjNE"
       frameborder="0"
       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+      playsinline="1"
       allowfullscreen
     ></iframe>
   </body>
