--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
     <iframe
       width="560"
       height="315"
-      src="https://www.youtube.com/embed/iEjIgRpjjNE"
+      src="https://www.youtube.com/embed/iEjIgRpjjNE?playsinline=1"
       frameborder="0"
       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-      playsinline="1"
       allowfullscreen
     ></iframe>
   </body>
