--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <iframe
       width="560"
       height="315"
-      src="https://www.youtube-nocookie.com/embed/sSzjX_ymPDc?playsinline=1"
+      src="https://www.youtube.com/embed/iEjIgRpjjNE?controls=0&amp;playsinline=1"
       frameborder="0"
       allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
       allowfullscreen
