--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
-<html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+  </head>
   <body>
-    <video playsinline muted loop autoplay>
-      <source
+    <div id="player">
+      <video
+        width="352"
+        height="288"
         src="https://manifest.googlevideo.com/api/manifest/hls_playlist/expire/1591554616/ei/2N3cXuPaN9HEgQPeyJ3ACA/ip/2409:10:3400:3f00:5dc5:505b:c6b5:4345/id/iEjIgRpjjNE.0/itag/96/source/yt_live_broadcast/requiressl/yes/ratebypass/yes/live/1/goi/160/sgoap/gir%3Dyes%3Bitag%3D140/sgovp/gir%3Dyes%3Bitag%3D137/hls_chunk_host/r3---sn-ogueln7s.googlevideo.com/vprv/1/playlist_type/LIVE/initcwndbps/5320/mh/Dr/mm/44/mn/sn-ogueln7s/ms/lva/mv/m/mvi/2/pl/28/dover/11/keepalive/yes/mt/1591532719/disable_polymer/true/sparams/expire,ei,ip,id,itag,source,requiressl,ratebypass,live,goi,sgoap,sgovp,vprv,playlist_type/sig/AOq0QJ8wRAIgTwiTaBvNaG5CJBE1Se5FNKuGpJhWkSE7fMIBqnKYn2kCIH_gRv3FFwVc2vdQKIuW_L510pLORHdd5Wcl2dO7CSSn/lsparams/hls_chunk_host,initcwndbps,mh,mm,mn,ms,mv,mvi,pl/lsig/AG3C_xAwRQIgdI2CAblSrkVVQE1xmoYtwgNO1B9NqOOxr96KqI4AOCwCIQC7tTLTzNqNHYzj06flSqY_nXbYGbtXHCFU0u3dQ4MWkQ%3D%3D/playlist/index.m3u8"
-      />
-    </video>
-    <!-- <iframe
-      width="560"
-      height="315"
-      src="https://www.youtube.com/embed/iEjIgRpjjNE?controls=0&amp;playsinline=1"
-      frameborder="0"
-      allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen
-    ></iframe> -->
+        controls
+        autoplay
+      ></video>
+    </div>
   </body>
 </html>
