--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <div id="player">
+    <iframe
+      width="560"
+      height="315"
+      src="https://www.youtube.com/embed/W7qixSou-3Y?controls=0&amp;playsinline=1"
+      frameborder="0"
+      allow="accelerometer; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen="false"
+    ></iframe>
+    <!-- <div id="player">
       <video
         width="352"
         height="288"
@@ -11,6 +19,6 @@
         playsinline
         webkit-playsinline
       ></video>
-    </div>
+    </div> -->
   </body>
 </html>
