--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       if (IVSPlayer.isPlayerSupported) {
         const player = IVSPlayer.create();
         player.attachHTMLVideoElement(document.getElementById('video-player'));
-        player.load("https://36df85d59e58.us-east-1.playback.live-video.net/api/video/v1/us-east-1.870002048350.channel.h4RuyfVQ820L.m3u8"));
+        player.load("https://da911ea660cb.us-west-2.playback.live-video.net/api/video/v1/us-west-2.870002048350.channel.Ub7ROIkUOxu5.m3u8"));
         player.play();
       }
     </script>
