--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 </head>
 
 <body>
-    <video id="video-player" width="560" height="315" controls playsinline></video>
+    <video id="video-player" width="560" height="315" controls autoplay playsinline></video>
     <script>
   if (IVSPlayer.isPlayerSupported) {
     const player = IVSPlayer.create();
