--- a/index.html
+++ b/index.html
@@ -1,15 +1,43 @@
+<!doctype html>
+<html lang="en">
 <head>
-    <script src="https://player.live-video.net/1.1.2/amazon-ivs-player.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.6.6/video-js.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.6.6/video.min.js"></script>
+    <script src="https://player.live-video.net/1.1.2/amazon-ivs-videojs-tech.min.js"></script>
 </head>
 
 <body>
-    <video id="video-player" width="560" height="315" controls autoplay playsinline></video>
+    <div class="video-container">
+        <video id="amazon-ivs-videojs" class="video-js vjs-4-3 vjs-big-play-centered" controls autoplay playsinline></video>
+    </div>
+    <style>
+        body {
+            margin: 0;
+        }
+
+        .video-container {
+            width: 640px;
+            height: 480px;
+            margin: 15px;
+        }
+    </style>
     <script>
-  if (IVSPlayer.isPlayerSupported) {
-    const player = IVSPlayer.create();
-    player.attachHTMLVideoElement(document.getElementById('video-player'));
-    player.load("https://da911ea660cb.us-west-2.playback.live-video.net/api/video/v1/us-west-2.870002048350.channel.Ub7ROIkUOxu5.m3u8");
-    player.play();
-  }
-</script>
+        (function play() {
+            // Get playback URL from Amazon IVS API
+            var PLAYBACK_URL = '';
+            
+            // Register Amazon IVS as playback technology for Video.js
+            registerIVSTech(videojs);
+
+            // Initialize player
+            var player = videojs('amazon-ivs-videojs', {
+               techOrder: ["AmazonIVS"]
+            }, () => {
+               console.log('Player is ready to use!');
+               // Play stream
+               player.src("https://da911ea660cb.us-west-2.playback.live-video.net/api/video/v1/us-west-2.870002048350.channel.Ub7ROIkUOxu5.m3u8");
+            });
+        })();
+    </script>
 </body>
+</html>
