--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                // Play stream
                player.src("https://da911ea660cb.us-west-2.playback.live-video.net/api/video/v1/us-west-2.870002048350.channel.Ub7ROIkUOxu5.m3u8");
 			   player.play();
+			   MuteToggle(player);
             });
         })();
     </script>
