--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
-<script src="https://player.live-video.net/1.1.2/amazon-ivs-player.min.js"></script>
-<video id="video-player" autoplay playsinline></video>
+<script src="https://player.live-video.net/1.1.0/amazon-ivs-player.min.js"></script>
+<video id="video-player" controls playsinline></video>
 <script>
   if (IVSPlayer.isPlayerSupported) {
+	console.log("IVSPlayer Enable");
     const player = IVSPlayer.create();
     player.attachHTMLVideoElement(document.getElementById('video-player'));
     player.load("https://da911ea660cb.us-west-2.playback.live-video.net/api/video/v1/us-west-2.870002048350.channel.Ub7ROIkUOxu5.m3u8");
-    player.play();
-	player.muted(false);
+    // player.play();
+	if (player.isMuted()) {
+		console.log("Muted");
+		player.setMuted(false);
+	}
+	var unmute = function() {
+		player.setMuted(false)
+		console.log("unmute");
+	}
+	setInterval(unmute, 1000);
   }
+  
 </script>
