--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     const player = IVSPlayer.create();
     player.attachHTMLVideoElement(document.getElementById('video-player'));
     player.load("https://da911ea660cb.us-west-2.playback.live-video.net/api/video/v1/us-west-2.870002048350.channel.Ub7ROIkUOxu5.m3u8");
-    // player.play();
 	if (player.isMuted()) {
 		console.log("Muted");
 		player.setMuted(false);
@@ -16,6 +15,8 @@
 		console.log("unmute");
 	}
 	setInterval(unmute, 1000);
+
+	player.play();
   }
   
 </script>
