--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div class="video-container">
-        <video id="amazon-ivs-videojs" class="video-js vjs-4-3 vjs-big-play-centered" controls playsinline></video>
+        <video id="amazon-ivs-videojs" class="video-js vjs-4-3 vjs-big-play-centered" autoplay controls playsinline></video>
     </div>
     <style>
         body {
