--- a/index.html
+++ b/index.html
@@ -16,9 +16,12 @@
         }
 
         .video-container {
-            width: 640px;
-            height: 480px;
-            margin: 15px;
+            position: absolute;
+			top:0;
+			width: 100%;
+			height: 100%;
+			background: #FFF;
+			z-index: 9999999999;
         }
     </style>
     <script>
