--- a/youtubelive/index.html
+++ b/youtubelive/index.html
@@ -30,7 +30,7 @@
       var player;
       function onYouTubeIframeAPIReady() {
         player = new YT.Player('player', {
-          videoId: '6YRUWrkV2R4',
+          videoId: 'XBPjVzSoepo',
           events: {
             'onReady': onPlayerReady,
             'onStateChange': onPlayerStateChange
